[package]
name = "sitter"
version = "0.1.5"
authors = ["Jeremy Andrews <jeremy@tag1.com>"]
edition = "2018"
description = "A library for managing user registration, login, and the user's things."
homepage = "https://github.com/jeremyandrews/sitter"
documentation = "https://docs.rs/sitter/"
repository = "https://github.com/jeremyandrewws/sitter"
readme = "README.md"
keywords = ["user", "registration", "framework", "web"]
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"
log = "0.4"
rand = "0.7"
regex = "1.4"
rust-argon2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.4.0", features = ["postgres", "runtime-async-std-rustls", "uuid"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
